<strong>v0.10.1 - v0.10.4</strong>
- Properly fixed a bug causing the game to crash when the changelog contains text. Now you can once again bask in the glory of those super long change notes! Yay!
- All praise Archanyhm for spending the past hour trying to fix this. Poor Arch. (I am actually the one writing this)

<strong>v0.10.0</strong>

<strong>Content Warning</strong>
<u><em>This update contains Halloween imagery that may be disturbing to some users. Viewer discretion is advised.</em></u>
Remember you can opt in and out of this feature to cater your own experience!

- Festive Halloween patrols will now start appearing around the spooky season!
- Expanded our ability to restrict events and patrols to certain date ranges.
- Added a toggle to prevent a cat from retiring
- Added a toggle to limit a cat's romantic interactions and prevent automatic mate changes.
- Many settings are now stored on a per-clan basis.
- New Loading Animations
- New Murder Reveal Events!
- Under the hood, patrols have been significantly refactored.
- Added Masked Tabbies!
- New White Patches: BOWTIE, MUSTACHE, REVERSEHEART, SPARROW, VEST, LOVEBUG, TRIXIE, SPARKLE, RIGHTEAR, LEFTEAR, ESTRELLA, REVERSEEYE, BACKSPOT, EYEBAGS, FADEBELLY, SAMMY, FRONT, BLOSSOMSTEP, BULLSEYE, SHOOTINGSTAR, EYESPOT, PEBBLE, TAILTWO, BUDDY. FCONE, FCTWO, MIA, DIGIT, SCAR, BUSTER, FINN, KROPKA, HAWKBLAZE, LOCKET, PRINCESS, ROSINA, CAKE
- New Vitiligo Pattern: SMOKEY
- New Tortie Patch Patterns: SMOKE, GRUMPYFACE, BRIE, BELOVED, SHILOH, BODY
- New Plains Background: Wasteland.
- New thoughts, patrols, and events!
- New names!
- New patrol art!
- Adjustments to grief events. In some cases, grief events are replaced by grief thoughts.
- Added "Change to Nonbinary" Button
- Dead cats can now be sorted by total age (age living + age dead)
- Cat relationships will show strong relationships first.
- Change the way spritesheets are stored in memory. This significantly decreases memory usage.
- Lots of bugfixes!