@@ -1141,7 +1141,7 @@
             "failing eyesight",
             "one bad eye",
             "blind",
-            "loss of balance",
+            "constantly dizzy",
             "partial hearing loss",
             "persistent headaches"
         ],
